Fix assertion in HttpPublisherActorTest#testOmitRequestBody.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>